--- a/style.css
+++ b/style.css
@@ -5,6 +5,12 @@
     padding: 0%;
     font-family: Arial, Helvetica, sans-serif;
 }
+body{
+    background-image: url('');
+    background-color: rgb(2, 29, 80);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 ::-webkit-scrollbar{
     width: 0px;
     width: 0px;
@@ -16,9 +22,8 @@ h1{
 }
 article{
     margin: auto;
-    max-width: 1600px;
+    max-width: 1000px;
     min-width: 300px;
-    background-color: rgba(1, 11, 153, 0.644);
     padding: 10px;
 }
 #container{
@@ -70,11 +75,11 @@ article p{
     ::-webkit-scrollbar{
         width: 6px;
         height: 10px;
-        background-color: rgba(0, 0, 255, 0.363);
+        background-color:  transparent;
     }
     ::-webkit-scrollbar-thumb{
         width: 6px;
-        background-color: tomato;
+        background-color: rgb(3, 0, 170);
     }
     h1, h2{
         text-align: center;
