--- a/estilos/forro.css
+++ b/estilos/forro.css
@@ -8,6 +8,11 @@
 h1{
     text-align: center;
 }
+article{
+    padding: 10px;
+    max-width: 1920px;
+    margin: auto;
+}
 
 #quadro{
     background-color: rgba(0, 0, 255, 0.171);
@@ -21,6 +26,37 @@ h1{
 .item{
     background-color: rgba(255, 255, 0, 0.452);
     margin: 10px;
-    width: 700px;
-    height: 400px;
+    width: 40vw;
+    height: 20vw;
+}
+@media (max-width:700px){
+    article{
+        padding: 10px;
+        max-width: 1000px;
+        margin: auto;
+    }
+    #quadro{
+        background-color: rgba(0, 0, 255, 0.171);
+        justify-content: space-around;
+        align-items: center;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        
+    }
+    .item{
+        background-color: rgba(38, 0, 255, 0.452);
+        margin: 10px;
+        width: 250px;
+        height: 100px;
+    }
+}
+
+@media (max-width: 600px) {
+    .item{
+        background-color: rgba(255, 255, 0, 0.452);
+        margin: 5px;
+        width: 200px;
+        height: 120px;
+    }
 }
