--- a/estilos/aleatorias.css
+++ b/estilos/aleatorias.css
@@ -8,15 +8,19 @@
 
 h1{
     text-align: center;
-    font-size: 2em;
-    margin: 10px;
+    font-size: 3em;
+    margin: 40px;
 }
 
 article{
     margin: auto;
     max-width: 1000px;
     min-width: 300px;
-    background-color: rgba(160, 2, 2, 0.253);
+    background-color: tomato;
+    padding: 20px 15px 10px 0px;
+    border-radius: 3px;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.445);
+    margin-bottom: 40px;
 }
 body{
     background-image: url('../imagens/mar.jpg');
@@ -63,6 +67,11 @@ body{
     }
 @media (max-width:710px) {
 
+    h1{
+        text-align: center;
+        font-size: 2em;
+        margin: 20px;
+    }
     body{
         background-image: url('../imagens/mar.jpg');
         background-repeat: no-repeat;
