--- a/estilos/style.css
+++ b/estilos/style.css
@@ -6,9 +6,9 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 body{
-
     background-repeat: no-repeat;
     background-size: cover;
+
 }
 ::-webkit-scrollbar{
     width: 0px;
@@ -24,6 +24,7 @@ article{
     max-width: 1000px;
     min-width: 300px;
     padding: 10px;
+
 }
 #container{
     display: flex;
@@ -36,10 +37,10 @@ article{
     padding: 20px 15px 10px 0px;
     border-radius: 3px;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.445);
-
 }
 .video{
     width: 45%;
+    height: 200px;
     margin-bottom: 10px;
 }
 .video :hover{
@@ -75,6 +76,11 @@ article p{
     line-height: 2em;
 }
 @media screen and (max-width:830px) {
+    body{
+        
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
     ::-webkit-scrollbar{
         width: 6px;
         height: 10px;
@@ -91,9 +97,8 @@ article p{
     }
     article{
         margin: auto;
-        max-width: 1400px;
+        max-width: 1000px;
         min-width: 300px;
-        padding-right: 20px;
     }
     article p{
         font-size: 0.87em;
@@ -111,7 +116,7 @@ article p{
     
     }
     .video{
-        width: 100%;
+        width: 55vw;
         margin-bottom: 10px;
     }
     .video :hover{
