--- a/estilos/forro.css
+++ b/estilos/forro.css
@@ -4,9 +4,48 @@
     margin: 0%;
     padding: 0%;
 }
+body{
+    height: 100vh;
+}
+.menu{
+    position: absolute;
+    right: 1vw;
+    top: 1vw;
+    font-size: 2em;
+}
+ul>li{
+    font-style: none;
+    list-style: none;
+    
+}
 
+#outrostipos{
+    margin-top: 20px;
+    padding: 10px;
+
+}
+a{
+    text-decoration: none;
+}
+#paginamenu{
+    position: fixed;
+    right: 0vw;
+    top: 0px;
+    display: inline;
+    background-color: aquamarine;
+    width: 300px;
+    height: 100vh;
+}
+header{
+    background-color: gray;
+}
 h1{
+    padding: 10px;
     text-align: center;
+}
+h2{
+    text-align: center;
+    font-size: 1.6em;
 }
 article{
     padding: 10px;
