--- a/estilos/forro.css
+++ b/estilos/forro.css
@@ -5,12 +5,18 @@
     padding: 0%;
 }
 body{
-    height: 100vh;
+    height: 100%;
+}
+header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
 }
 .menu{
     position: absolute;
     right: 1vw;
-    top: 1vw;
+    top: 20px;
     font-size: 2em;
 }
 ul>li{
@@ -27,14 +33,28 @@ ul>li{
 a{
     text-decoration: none;
 }
-#paginamenu{
-    position: fixed;
+#menudogenero{
+    cursor: pointer;
+    
+}
+.sair{
+    position: absolute;
+    top: 17px;
+    right: 4px;
+}
+#outrostipos{
+    display: none;
+    position: absolute;
     right: 0vw;
-    top: 0px;
-    display: inline;
+    top: -26px;
     background-color: aquamarine;
     width: 300px;
     height: 100vh;
+
+}
+#musicas{
+    position: absolute;
+    top: 100px;
 }
 header{
     background-color: gray;
@@ -44,11 +64,12 @@ h1{
     text-align: center;
 }
 h2{
+    position: absolute;
     text-align: center;
     font-size: 1.6em;
 }
 article{
-    padding: 10px;
+
     max-width: 1000px;
     min-width: 300px;
     margin: auto;
@@ -77,7 +98,7 @@ article{
 }
 @media (max-width:700px){
     article{
-        padding: 10px;
+        padding:0px 5px;
         max-width: 1000px;
         margin: auto;
     }
