--- a/estilos/forro.css
+++ b/estilos/forro.css
@@ -11,6 +11,7 @@ header{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    background-color: gray;
 
 }
 .menu{
@@ -19,12 +20,6 @@ header{
     top: 20px;
     font-size: 2em;
 }
-ul>li{
-    font-style: none;
-    list-style: none;
-    
-}
-
 #outrostipos{
     margin-top: 20px;
     padding: 10px;
@@ -33,38 +28,87 @@ ul>li{
 a{
     text-decoration: none;
 }
+#home{
+    display: flex;
+    border-radius: 20px;
+    height: 50px;
+    background-color: rgb(1, 155, 1);
+    width: 300px;
+    margin-bottom: 20px;
+    align-items: center;
+    justify-content: center;
+}
+#home:hover{
+    transition-duration: 1.2s;
+    box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.438);
+}
+a>p{
+    color: white;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 2em;
+}
+p.abasmus:hover{
+    transition-duration: 1s;
+    box-shadow: 0px 0px 10px black;
+    cursor: pointer;
+}
 #menudogenero{
     cursor: pointer;
     
 }
 .sair{
+    cursor: pointer;
     position: absolute;
-    top: 17px;
-    right: 4px;
+    top: 25px;
+    right: 6px;
 }
 #outrostipos{
     display: none;
-    position: absolute;
+    position:fixed;
     right: 0vw;
     top: -26px;
-    background-color: aquamarine;
+    background-color: rgb(104, 103, 103);
     width: 300px;
-    height: 100vh;
+    height: 98.6%;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    
+}
+#musica{
+    display: flex;
+    width: 100%;
 
 }
-#musicas{
-    position: absolute;
-    top: 100px;
+.abasmus {
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    width: 300px;
+    height: 100px;
+    margin: 10px;
+    background-color: black;
+    border-radius: 8px;
+    
 }
-header{
-    background-color: gray;
+
+#phonk{
+    background-image: url('../imagens/paisagem-de-wireframe-abstrata-c.png');
+    background-position: center center;
 }
+#aleatorias{
+    background-image: url('../imagens/mar.jpg');
+    background-position: center bottom;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
 h1{
-    padding: 10px;
-    text-align: center;
+    padding: 40px;
 }
 h2{
-    position: absolute;
+    font-family: 'Courier New', Courier, monospace;
+    margin-top: 30px;
     text-align: center;
     font-size: 1.6em;
 }
@@ -85,8 +129,8 @@ article{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    
 }
+
 .item{
     background-color: rgba(255, 255, 0, 0.452);
     margin: 10px;
