--- a/estilos/forro.css
+++ b/estilos/forro.css
@@ -63,10 +63,11 @@ p.abasmus:hover{
     right: 6px;
 }
 #outrostipos{
-    display: none;
+    display: flex;
     position:fixed;
-    right: 0vw;
+    right: -320px;
     top: -26px;
+    transition-duration: 1s;
     background-color: rgb(104, 103, 103);
     width: 300px;
     height: 98.6%;
@@ -90,6 +91,7 @@ p.abasmus:hover{
     background-color: black;
     border-radius: 8px;
     
+    
 }
 
 #phonk{
@@ -102,6 +104,7 @@ p.abasmus:hover{
     background-size: cover;
     background-repeat: no-repeat;
 }
+
 
 h1{
     padding: 40px;
