--- a/estilos/style.css
+++ b/estilos/style.css
@@ -17,17 +17,26 @@ body{
     width: 0px;
     width: 0px;
 }
+.menu{
+    position: absolute;
+    right: 8px;
+    top: 8px;
+    font-size: 2em;
+    cursor: pointer;
+}
 #outrostipos{
     background-color: gray;
     display: flex;
     position: fixed;
-    right: 0%;
+    right: -320px;
     top: 0px;
     justify-content: space-between;
     flex-direction: column;
     align-items: center;
     height: 100vh;
     width: 320px;
+    transition-duration: 1s;
+
 }
 #aleatorias{
     background-image: url('../imagens/mar.jpg');
@@ -46,6 +55,7 @@ body{
     position: absolute;
     top: 20px;
     right: 15px;
+    cursor: pointer;
 }
 #musicas{
     height: 45%;
@@ -66,6 +76,7 @@ h1{
     background-color: black;
     color: white;
     font-size: 1.4em;
+    cursor: pointer;
 }
 h2{
    margin-top: 10px;
