--- a/estilos/forro.css
+++ b/estilos/forro.css
@@ -44,7 +44,7 @@ a>p{
 }
 p.abasmus:hover{
     transition-duration: 1s;
-    box-shadow: 0px 0px 10px black;
+    box-shadow: 0px 0px 14px rgba(0, 0, 0, 0.377);
     cursor: pointer;
 }
 #menudogenero{
